# AFK-Dunld

./: .gitignore  BUILD_OPTIMIZATION_GUIDE.md  BUNDLED_YTDLP_IMPLEMENTATION.md  CHANGELOG.md  COMPILATION_FIXES_SUMMARY.md  COMPILATION_FIX_SUMMARY.md  CONTRIBUTING.md  DOCUMENTATION_SUMMARY.md  FINAL_COMPILATION_FIX_SUMMARY.md  GITIGNORE_UPDATE_SUMMARY.md  LICENSE  README.md  README_YTDLP_BUNDLING.md  TAURI_DEV_FIX.md  TODOLIST.md  UI_CHANGES.md  YTDLP_BUNDLING_GUIDE.md  index.html  install-code.md  package-lock.json  package.json  rebuild.bat  rebuild.sh  tailwind.config.js  tsconfig.json  vite.config.optimized.ts
.github/: pull_request_template.md
browser-extension/: INSTALL_INSTRUCTIONS.md  README.md  TEST_GUIDE.md
docs/: ADVANCED_FEATURES.md  API.md  (+5 more)
src-tauri/: .gitignore  Cargo.toml  build.rs  build_output.txt  dev_output.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: browser_commands.rs  category_commands.rs  download_commands.rs  ftp_commands.rs  history_commands.rs  logging_commands.rs  mod.rs  scheduler_commands.rs  security_commands.rs  settings_commands.rs  sftp_commands.rs  system_commands.rs  torrent_commands.rs  ytdlp_commands.rs
src-tauri/src/core/: category.rs  checksum.rs  chunk_manager.rs  download_engine.rs  download_task.rs  merge_manager.rs  mod.rs  queue_manager.rs  resume_manager.rs  retry.rs  scheduler.rs  segment_downloader.rs  speed_limiter.rs  speed_tracker.rs
src-tauri/src/database/: db.rs  mod.rs  models.rs  queries.rs  torrent_queries.rs
src-tauri/src/database/migrations/: 001_initial.sql  002_add_categories.sql  003_add_torrents.sql
src-tauri/src/events/: download_events.rs
src-tauri/src/network/: bencode_parser.rs  ftp_client.rs  http_client.rs  mod.rs  proxy_manager.rs  sftp_client.rs  torrent_advanced.rs  torrent_client.rs  torrent_client_librqbit.rs  torrent_helpers.rs  url_parser.rs  youtube_downloader.rs
src-tauri/src/services/: clipboard_service.rs  file_watcher.rs  mod.rs  native_messaging.rs  notification_service.rs  tray_service.rs
src-tauri/src/state/: app_state.rs
src-tauri/src/utils/: constants.rs  enhanced_error.rs  error.rs  file_utils.rs  format_utils.rs  logging.rs  mod.rs  performance.rs  security.rs  ytdlp_manager.rs
src-tauri/tests/: test_enhancements.rs  test_phase3.rs  torrent_integration_test.rs
(+82 files in other folders)
