[package]
name = "afk-dunld"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "afk_dunld_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
ureq = { version = "2.9", features = ["json"] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.13.2", features = ["stream", "json", "gzip", "socks"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "chrono"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
chrono = { version = "0.4.43", features = ["serde"] }
thiserror = "2.0.18"
anyhow = "1.0.101"
url = "2.5.8"
sha2 = "0.10.9"
md-5 = "0.10.6"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
flume = "0.12.0"
arboard = "3.6.1"
notify-rust = "4.12.0"
dirs = "6.0.0"
humansize = "2.1.3"
futures = "0.3.31"
futures-util = "0.3.31"
governor = "0.10.4"
regex = "1.12.3"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
parking_lot = "0.12"
tokio-util = "0.7"
crc32fast = "1.3"
opener = "0.7"
num_cpus = "1.16"
image = "0.25"
suppaftp = { version = "6.0", features = ["async-secure", "async-native-tls"] }
async-native-tls = "0.5"
# SFTP support - using ssh2 directly without async wrapper
ssh2 = "0.9"
# Torrent support - using simpler approach for now
# librqbit = "5.1"  # Commented out due to compilation errors
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.21"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["sysinfoapi", "fileapi"] }

[target.'cfg(not(windows))'.dependencies]
libc = "0.2"
